# insightful_guardian

./: .gitignore  README.md  package-lock.json  pyproject.toml  rapidfuzz-3.10.1-cp313-cp313-win_amd64.whl  rapidfuzz-3.11.0-cp313-cp313-win_amd64.whl  requirements.txt
.github/workflows/: bandit.yml  codeql.yml  node.js.yml  pylint.yml
backend/: main.py
backend/api/: routes.py
backend/db/: database.py  models.py
backend/repositories/: mongodb.py  postgres.py
backend/services/: moderation_service.py  moderation_service_test.py  post_service.py  post_service_test.py
backend/services/lib_profanity/: main_linux.c  main_win10.c
backend/utils/: exceptions.py  gen_fkdata.py  sec_analyzer.py
docs/: architecture.md  contribution.md
frontend/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/server/: db.js  index.js
frontend/server/routes/: posts.js
frontend/src/: App.css  App.js  App.jsx  config.js  setupTests.js  styles.css  styles.css.map
frontend/src/components/: CategoryPage.js  CategoryWidget.js  CategoryWidget.jsx  Footer.js  Footer.jsx  IndexAllPosts.js  Pagination.js  PostForm.js  PostForm.jsx  PostInput.js  PostInput.jsx  PostItem.js  PostItem.jsx  PostList.jsx  PostPage.js  SearchInput.js  SearchPage.js  SearchResults.js  SearchResults.jsx  Tabs.js  Tabs.jsx  UserHelper.js  useIframeValidation.js
frontend/src/styles/: main.scss
frontend/src/styles/base/: _reset.scss
frontend/src/styles/components/: _link.scss  _loading.scss  _pagination.scss
frontend/src/styles/layout/: _category.scss  _footer.scss  _header.scss
frontend/src/styles/pages/: _index.scss  _post-form.scss  (+2 more)
frontend/src/tests/: IndexAllPosts.test.js  IndexAllPosts.test.jsx  PostForm.test.js  PostForm.test.jsx
(+4 files in other folders)
