[tool.poetry]
name = "insightful-guardian"
version = "0.1.0"
description = ""
authors = ["YarBurArt <81087967+YarBurArt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
motor = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
