[tool.poetry]
name = "insightful-guardian"
version = "0.1.0"
description = ""
authors = ["YarBurArt <81087967+YarBurArt@users.noreply.github.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
motor = "^3.4.0"
faker = "^25.2.0"
fastapi-cors = "^0.0.6"
nltk = "^3.8.1"
pandas = "^2.2.2"
better-profanity = "^0.7.0"
pylint = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
