[tool.poetry]
name = "insightful-guardian"
version = "0.1.0"
description = ""
authors = ["YarBurArt <81087967+YarBurArt@users.noreply.github.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
motor = "^3.4.0"
faker = "^25.2.0"
fastapi-cors = "^0.0.6"
pandas = "^2.2.2"
better-profanity = "^0.7.0"
pylint = "^3.2.2"
transformers = "^4.52.1"
#torch = "^2.3.0"
bandit = "^1.7.8"
g4f = "^0.3.1.9"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
rapidfuzz = "^3.9.3"
levenshtein = "0.26.1"
#asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
curl-cffi = "^0.7.3"
pygments = "2.18.0"
aiosqlite = "^0.21.0"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
asyncpg = "^0.30.0"
pytest = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
